# WhichKey-NG

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: version.rc.in
include/: HUD.h  PCH.h
src/: HUD.cpp  Main.cpp
